<resources>
    <string name="app_name">TodoAppFinal</string>
    <string name="todoApp">ToDo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="when_no_todo_tv">Empty Todo. Add to Create</string>
    <string name="Completed">Complete</string>
    <string name="TODO">TODO APP</string>
    <string name="todo_desc_tv">Todo Description</string>
    <string name="todo_title_tv">Todo Title</string>
    <string name="update_todo">Update</string>
    <string name="new_todo">Add new</string>
    <string name="notification_hint">Add Deadline</string>
    <string name="change_grid">Change Layout</string>
    <string name="github">Github</string>
    <string name="home">Home</string>
    <string name="Search">Search</string>
    <string name="search_todo">Search todo</string>
    <string name="no_results_found">No results</string>
    <string name="sortByTask">Sort by Tasks</string>


</resources>