<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Fragment.TodoDetailFragment"
    android:padding="16dp">
    <!-- TODO: Update blank fragment layout -->



    <ImageView
        android:id="@+id/back_btn_img"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_heading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TODO"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn_img"
        app:layout_constraintStart_toEndOf="@+id/back_btn_img"
        app:layout_constraintTop_toTopOf="@+id/back_btn_img" />

    <TextView
        android:id="@+id/based_on_click_heading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TODO"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/main_heading_tv" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/back_btn_img"
        app:layout_constraintTop_toBottomOf="@+id/main_heading_tv"
        app:layout_constraintVertical_bias="0.24000001"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/todo_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/todo_title_tv"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todo_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/todo_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/todo_desc_tv"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todo_desc_et"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notification_bell_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notification_hint"
            android:src="@drawable/ic_notification"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_notification">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/tick_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_check" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>